--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,23 @@
+// Use this file as a starting point for your project's .eslintrc.
+// Copy this file, and add rule overrides as needed.
 {
-  "env": {
-    "node": true
+  "extends" : "airbnb",
+  "env" : {
+    "browser" : true,
+    "node"    : true,
+    "mocha"   : true
   },
-  "extends": "airbnb-base"
+  "parserOptions" : {
+    "ecmaVersion" : 6,
+    "sourceType"  : "script"
+  },
+  "rules" : {
+    "strict"                 : 0,
+    "no-multi-spaces"        : 0,
+    "key-spacing"            : 0,
+    "no-underscore-dangle"   : 0,
+    "class-methods-use-this" : 0,
+    "no-console"             : 0,
+    "valid-jsdoc"            : 2
+  }
 }
