--- a/package.json
+++ b/package.json
@@ -1,37 +1,58 @@
 {
-  "name": "oauth2orize-examples",
-  "version": "0.2.0",
-  "repository": "https://github.com/gerges-beshay/oauth2orize-examples.git",
+  "name": "oauth2orize-authorization-server",
+  "version": "6.3.4",
+  "author": "Frank Hassanabad <frankhassanabad@gmail.com>",
+  "description": "OAuth2 security recipes and examples based on OAuth2orize",
   "license": "MIT",
-  "contributors": [
-    {
-      "name": "PoziWorld",
-      "url": "https://github.com/PoziWorld"
-    }
-  ],
-  "scripts": {
-    "start": "node app.js"
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/FrankHassanabad/Oauth2orizeRecipes.git"
   },
   "dependencies": {
-    "@poziworld/oauth2orize": "^1.11.1",
-    "body-parser": "^1.17.1",
-    "connect-ensure-login": "^0.1.1",
-    "cookie-parser": "^1.4.3",
-    "ejs": "^2.5.6",
-    "errorhandler": "^1.5.0",
-    "express": "^4.15.2",
-    "express-session": "^1.15.2",
-    "nodemon": "^2.0.4",
-    "oauth2orize": "^1.8.0",
-    "passport": "^0.3.2",
-    "passport-http": "^0.3.0",
-    "passport-http-bearer": "^1.0.1",
-    "passport-local": "^1.0.0",
-    "passport-oauth2-client-password": "^0.1.2"
+    "body-parser": "^1.9.x",
+    "connect-ensure-login": "^0.1.x",
+    "cookie-parser": "^1.3.x",
+    "ejs": "^2.5.x",
+    "express": "^4.10.x",
+    "express-session": "^1.9.x",
+    "jsonwebtoken": "^7.2.1",
+    "oauth2orize": "^1.0.x",
+    "passport": "^0.3.x",
+    "passport-http": "^0.3.x",
+    "passport-http-bearer": "^1.0.x",
+    "passport-local": "^1.0.x",
+    "passport-oauth2-client-password": "^0.1.x",
+    "uuid": "^3.0.1"
+  },
+  "scripts": {
+    "lint": "eslint *.js config db test",
+    "start": "node app.js",
+    "test": "mocha test test/db test/config",
+    "test:watch": "npm run test -- --watch",
+    "test:integration": "mocha test/integration"
+  },
+  "engines": {
+    "node": ">=6.7.0",
+    "npm": ">=3.10.0"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0"
-  }
+    "chai": "^3.5.0",
+    "eslint": "^3.10.x",
+    "eslint-config-airbnb": "^13.0.x",
+    "eslint-plugin-import": "^2.2.x",
+    "eslint-plugin-jsx-a11y": "^2.2.x",
+    "eslint-plugin-react": "^6.7.x",
+    "mocha": "^3.2.x",
+    "es6-promisify": "^5.0.x",
+    "request": "^2.48.x",
+    "sinon": "^1.17.6",
+    "sinon-chai": "^2.8.0"
+  },
+  "keywords": [
+    "authentication",
+    "oauth2",
+    "security",
+    "passport"
+  ]
 }
