--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.9.x",
     "connect-ensure-login": "^0.1.x",
     "cookie-parser": "^1.3.x",
+    "cors": "^2.8.5",
     "ejs": "^2.5.x",
     "express": "^4.10.x",
     "express-session": "^1.9.x",
