--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "https://github.com/FrankHassanabad/Oauth2orizeRecipes.git"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.9.x",
     "connect-ensure-login": "^0.1.x",
     "cookie-parser": "^1.3.x",
