--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.10.x",
     "express-session": "^1.9.x",
     "jsonwebtoken": "^7.2.1",
+    "nodemon": "^2.0.4",
     "oauth2orize": "^1.0.x",
     "passport": "^0.3.x",
     "passport-http": "^0.3.x",
