--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     }
   ],
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "@poziworld/oauth2orize": "^1.11.1",
